[package]
name = "radio-common"
version = "0.0.0"
edition = "2021"

[dependencies]
binrw = { version = "0.14.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
pin-project = { version = "1.1.5", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["net", "rt"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["codec"] }
